testdata/invalid/import-alias-conflict/mything/mything.hzn
package mything

type Thing struct {
    x u32
}
